--- a/aether/Cargo.toml
+++ b/aether/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ash = "0.37.0+1.3.209"
+ash = "0.37.0"
+winit = "0.27.0"
