--- a/aether/Cargo.toml
+++ b/aether/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ash = "0.37.0"
-winit = "0.27.0"
+vulkano = "0.30.0"
+vulkano-win = "0.30.0"
+winit = "0.26.0"
 shaderc = "0.8.0"
 cstr = "0.2.10"
 eyre = "0.6.8"
+bytemuck = "1.11.0"
