--- a/arbiter/Cargo.toml
+++ b/arbiter/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 aether = { path = "../aether" }
-winit = "0.27.0"
-ash = "0.37.0"
+winit = "0.26.0"
+vulkano = "0.30.0"
+vulkano-shaders = "0.30.0"
