--- a/aether/Cargo.toml
+++ b/aether/Cargo.toml
@@ -15,3 +15,4 @@ eyre = "0.6.8"
 bytemuck = "1.11.0"
 ciborium = "0.2.0"
 serde = "1.0.143"
+uuid = { version = "1.1.2", features = ["v4", "serde"] }
