--- a/aether/Cargo.toml
+++ b/aether/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 vulkano = "0.30.0"
 vulkano-win = "0.30.0"
+vulkano-shaders = "0.30.0"
 winit = "0.26.0"
 shaderc = "0.8.0"
 cstr = "0.2.10"
@@ -19,3 +20,5 @@ serde_json = "1.0.83"
 uuid = { version = "1.1.2", features = ["v4", "serde"] }
 nalgebra-glm = "0.17.0"
 nalgebra = "0.31.1"
+num-derive = "0.2"
+num-traits = "0.2"
